--- a/xamoom-pingeborg-ios/xamoom-pingeborg-ios/ContentBlocks/Blocks/DownloadBlockTableViewCell.xib
+++ b/xamoom-pingeborg-ios/xamoom-pingeborg-ios/ContentBlocks/Blocks/DownloadBlockTableViewCell.xib
@@ -2,19 +2,20 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="DownloadBlockTableViewCell" rowHeight="69" id="KGk-i7-Jjw" customClass="DownloadBlockTableViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="329" height="75"/>
+            <rect key="frame" x="0.0" y="0.0" width="328" height="75"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="grh-BE-wCl">
-                        <rect key="frame" x="0.0" y="0.0" width="329" height="68"/>
+                        <rect key="frame" x="8" y="0.0" width="312" height="68"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Yec-h6-DBB">
                                 <rect key="frame" x="8" y="8" width="52" height="52"/>
@@ -24,13 +25,13 @@
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pYX-UX-kgy">
-                                <rect key="frame" x="68" y="35" width="253" height="21"/>
+                                <rect key="frame" x="68" y="37" width="236" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Titel" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LGQ-fC-xb3">
-                                <rect key="frame" x="68" y="12" width="253" height="21"/>
+                                <rect key="frame" x="68" y="12" width="236" height="21"/>
                                 <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
@@ -45,12 +46,12 @@
                             <constraint firstItem="LGQ-fC-xb3" firstAttribute="leading" secondItem="pYX-UX-kgy" secondAttribute="leading" id="Okg-TH-aFH"/>
                             <constraint firstItem="LGQ-fC-xb3" firstAttribute="trailing" secondItem="pYX-UX-kgy" secondAttribute="trailing" id="m3z-wJ-EBy"/>
                             <constraint firstItem="LGQ-fC-xb3" firstAttribute="leading" secondItem="Yec-h6-DBB" secondAttribute="trailing" constant="8" id="pBb-ko-lry"/>
-                            <constraint firstItem="pYX-UX-kgy" firstAttribute="top" secondItem="LGQ-fC-xb3" secondAttribute="bottom" constant="2" id="wBE-hm-DC4"/>
+                            <constraint firstItem="pYX-UX-kgy" firstAttribute="top" secondItem="LGQ-fC-xb3" secondAttribute="bottom" constant="4" id="wBE-hm-DC4"/>
                             <constraint firstItem="Yec-h6-DBB" firstAttribute="top" secondItem="grh-BE-wCl" secondAttribute="top" constant="8" id="xa0-Jq-xjp"/>
                         </constraints>
                     </view>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LM6-J7-YFJ">
-                        <rect key="frame" x="0.0" y="0.0" width="329" height="74"/>
+                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LM6-J7-YFJ">
+                        <rect key="frame" x="-1" y="0.0" width="329" height="74"/>
                         <state key="normal">
                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                         </state>
@@ -60,13 +61,9 @@
                     </button>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="LM6-J7-YFJ" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="B7P-tz-6lE"/>
-                    <constraint firstAttribute="trailing" secondItem="LM6-J7-YFJ" secondAttribute="trailing" id="FIP-QP-JId"/>
-                    <constraint firstAttribute="bottom" secondItem="LM6-J7-YFJ" secondAttribute="bottom" id="FsM-aQ-Nzj"/>
-                    <constraint firstItem="LM6-J7-YFJ" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="O5d-eG-VFa"/>
-                    <constraint firstAttribute="trailing" secondItem="grh-BE-wCl" secondAttribute="trailing" id="Y83-8p-CcL"/>
+                    <constraint firstItem="grh-BE-wCl" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="9vm-E9-2i4"/>
                     <constraint firstItem="grh-BE-wCl" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="cyQ-wP-jlZ"/>
-                    <constraint firstItem="grh-BE-wCl" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="mfM-5b-oXX"/>
+                    <constraint firstItem="grh-BE-wCl" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="pFb-D4-af9"/>
                     <constraint firstAttribute="bottom" secondItem="grh-BE-wCl" secondAttribute="bottom" constant="6" id="sm1-dF-B1J"/>
                 </constraints>
             </tableViewCellContentView>
@@ -75,7 +72,7 @@
                 <outlet property="icon" destination="Yec-h6-DBB" id="g9V-ni-kZM"/>
                 <outlet property="titleLabel" destination="LGQ-fC-xb3" id="7fw-f7-JEJ"/>
             </connections>
-            <point key="canvasLocation" x="470.5" y="532.5"/>
+            <point key="canvasLocation" x="470" y="532.5"/>
         </tableViewCell>
     </objects>
 </document>
