--- a/xamoom-pingeborg-ios/xamoom-pingeborg-ios/ContentBlocks/Blocks/LinkBlockTableViewCell.xib
+++ b/xamoom-pingeborg-ios/xamoom-pingeborg-ios/ContentBlocks/Blocks/LinkBlockTableViewCell.xib
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7702" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7701"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -14,7 +15,7 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oTR-s9-34N">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="68"/>
+                        <rect key="frame" x="8" y="0.0" width="304" height="68"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="sQI-f1-ya2">
                                 <rect key="frame" x="8" y="8" width="52" height="52"/>
@@ -23,8 +24,17 @@
                                     <constraint firstAttribute="height" constant="52" id="rOi-td-l6b"/>
                                 </constraints>
                             </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dMs-iS-weg">
+                                <rect key="frame" x="-8" y="0.0" width="30" height="30"/>
+                                <state key="normal">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="linkClicked:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="OVd-N3-xB0"/>
+                                </connections>
+                            </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0mE-iO-IL7">
-                                <rect key="frame" x="68" y="35" width="244" height="21"/>
+                                <rect key="frame" x="68" y="35" width="236" height="21"/>
                                 <constraints>
                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="21" id="Fx2-Rx-3ik"/>
                                 </constraints>
@@ -33,26 +43,17 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ra4-P8-pN7">
-                                <rect key="frame" x="68" y="12" width="244" height="21"/>
+                                <rect key="frame" x="68" y="12" width="236" height="21"/>
                                 <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dMs-iS-weg">
-                                <rect key="frame" x="0.0" y="-1" width="320" height="71"/>
-                                <state key="normal">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <action selector="linkClicked:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="OVd-N3-xB0"/>
-                                </connections>
-                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="ra4-P8-pN7" firstAttribute="leading" secondItem="0mE-iO-IL7" secondAttribute="leading" id="4A3-P4-L5a"/>
                             <constraint firstItem="ra4-P8-pN7" firstAttribute="top" secondItem="oTR-s9-34N" secondAttribute="top" constant="12" id="Cem-Tr-XNb"/>
-                            <constraint firstAttribute="trailing" secondItem="ra4-P8-pN7" secondAttribute="trailing" constant="8" id="NRg-fv-vsO"/>
+                            <constraint firstAttribute="trailing" secondItem="ra4-P8-pN7" secondAttribute="trailing" id="NRg-fv-vsO"/>
                             <constraint firstItem="sQI-f1-ya2" firstAttribute="top" secondItem="oTR-s9-34N" secondAttribute="top" constant="8" id="ZAG-en-3vM"/>
                             <constraint firstItem="sQI-f1-ya2" firstAttribute="leading" secondItem="oTR-s9-34N" secondAttribute="leading" constant="8" id="imc-s3-wme"/>
                             <constraint firstItem="ra4-P8-pN7" firstAttribute="leading" secondItem="sQI-f1-ya2" secondAttribute="trailing" constant="8" id="j2W-aj-fOC"/>
@@ -67,9 +68,17 @@
                 <constraints>
                     <constraint firstAttribute="bottom" secondItem="oTR-s9-34N" secondAttribute="bottom" constant="6" id="4Tw-kp-o1z"/>
                     <constraint firstItem="oTR-s9-34N" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="AWK-10-juO"/>
-                    <constraint firstAttribute="trailing" secondItem="oTR-s9-34N" secondAttribute="trailing" id="Kkv-96-Rpp"/>
-                    <constraint firstItem="oTR-s9-34N" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="cjX-I8-OZE"/>
+                    <constraint firstAttribute="trailing" secondItem="oTR-s9-34N" secondAttribute="trailing" constant="8" id="Kkv-96-Rpp"/>
+                    <constraint firstItem="oTR-s9-34N" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="REx-OU-3hV"/>
+                    <constraint firstItem="oTR-s9-34N" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="cjX-I8-OZE"/>
+                    <constraint firstItem="oTR-s9-34N" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="mRo-Dg-cBv"/>
                 </constraints>
+                <variation key="default">
+                    <mask key="constraints">
+                        <exclude reference="Kkv-96-Rpp"/>
+                        <exclude reference="cjX-I8-OZE"/>
+                    </mask>
+                </variation>
             </tableViewCellContentView>
             <connections>
                 <outlet property="icon" destination="sQI-f1-ya2" id="AgK-ga-PR8"/>
